Remove the gateway in favor of all the services hosting their own http 1.1 gateway
