# components/originsrv/api/origins/origins.pb.go
@@ -1,11 +1,11 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
-// source: components/gateway/api/origins/origins.proto
+// source: components/originsrv/api/origins/origins.proto
 
 /*
 Package origins is a generated protocol buffer package.
 
 It is generated from these files:
-	components/gateway/api/origins/origins.proto
+	components/originsrv/api/origins/origins.proto
 
 It has these top-level messages:
 */
@@ -45,6 +45,9 @@ const _ = grpc.SupportPackageIsVersion4
 // Client API for Origins service
 
 type OriginsClient interface {
+	// rpc GetOrigins (originsrv.origins.request.GetOriginsReq) returns (originsrv.origins.response.OriginsResp) {
+	//     option (google.api.http).get = "/origins";
+	// };
 	GetOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.GetOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error)
 	CreateOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.CreateOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error)
 	UpdateOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.UpdateOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error)
@@ -60,7 +63,7 @@ func NewOriginsClient(cc *grpc.ClientConn) OriginsClient {
 
 func (c *originsClient) GetOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.GetOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error) {
 	out := new(hurtlocker_originsrv_origins_response.OriginResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.origins.Origins/GetOrigin", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.originsrv.api.origins.Origins/GetOrigin", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -69,7 +72,7 @@ func (c *originsClient) GetOrigin(ctx context.Context, in *hurtlocker_originsrv_
 
 func (c *originsClient) CreateOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.CreateOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error) {
 	out := new(hurtlocker_originsrv_origins_response.OriginResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.origins.Origins/CreateOrigin", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.originsrv.api.origins.Origins/CreateOrigin", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -78,7 +81,7 @@ func (c *originsClient) CreateOrigin(ctx context.Context, in *hurtlocker_origins
 
 func (c *originsClient) UpdateOrigin(ctx context.Context, in *hurtlocker_originsrv_origins_request.UpdateOriginReq, opts ...grpc.CallOption) (*hurtlocker_originsrv_origins_response.OriginResp, error) {
 	out := new(hurtlocker_originsrv_origins_response.OriginResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.origins.Origins/UpdateOrigin", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.originsrv.api.origins.Origins/UpdateOrigin", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -88,6 +91,9 @@ func (c *originsClient) UpdateOrigin(ctx context.Context, in *hurtlocker_origins
 // Server API for Origins service
 
 type OriginsServer interface {
+	// rpc GetOrigins (originsrv.origins.request.GetOriginsReq) returns (originsrv.origins.response.OriginsResp) {
+	//     option (google.api.http).get = "/origins";
+	// };
 	GetOrigin(context.Context, *hurtlocker_originsrv_origins_request.GetOriginReq) (*hurtlocker_originsrv_origins_response.OriginResp, error)
 	CreateOrigin(context.Context, *hurtlocker_originsrv_origins_request.CreateOriginReq) (*hurtlocker_originsrv_origins_response.OriginResp, error)
 	UpdateOrigin(context.Context, *hurtlocker_originsrv_origins_request.UpdateOriginReq) (*hurtlocker_originsrv_origins_response.OriginResp, error)
@@ -107,7 +113,7 @@ func _Origins_GetOrigin_Handler(srv interface{}, ctx context.Context, dec func(i
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.origins.Origins/GetOrigin",
+		FullMethod: "/hurtlocker.originsrv.api.origins.Origins/GetOrigin",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(OriginsServer).GetOrigin(ctx, req.(*hurtlocker_originsrv_origins_request.GetOriginReq))
@@ -125,7 +131,7 @@ func _Origins_CreateOrigin_Handler(srv interface{}, ctx context.Context, dec fun
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.origins.Origins/CreateOrigin",
+		FullMethod: "/hurtlocker.originsrv.api.origins.Origins/CreateOrigin",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(OriginsServer).CreateOrigin(ctx, req.(*hurtlocker_originsrv_origins_request.CreateOriginReq))
@@ -143,7 +149,7 @@ func _Origins_UpdateOrigin_Handler(srv interface{}, ctx context.Context, dec fun
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.origins.Origins/UpdateOrigin",
+		FullMethod: "/hurtlocker.originsrv.api.origins.Origins/UpdateOrigin",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(OriginsServer).UpdateOrigin(ctx, req.(*hurtlocker_originsrv_origins_request.UpdateOriginReq))
@@ -152,7 +158,7 @@ func _Origins_UpdateOrigin_Handler(srv interface{}, ctx context.Context, dec fun
 }
 
 var _Origins_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "hurtlocker.api.origins.Origins",
+	ServiceName: "hurtlocker.originsrv.api.origins.Origins",
 	HandlerType: (*OriginsServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
@@ -169,30 +175,30 @@ var _Origins_serviceDesc = grpc.ServiceDesc{
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
-	Metadata: "components/gateway/api/origins/origins.proto",
+	Metadata: "components/originsrv/api/origins/origins.proto",
 }
 
-func init() { proto.RegisterFile("components/gateway/api/origins/origins.proto", fileDescriptor0) }
+func init() { proto.RegisterFile("components/originsrv/api/origins/origins.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 300 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x92, 0xbd, 0x4a, 0xf4, 0x40,
-	0x14, 0x86, 0xc9, 0xf7, 0x81, 0x3f, 0x61, 0x45, 0x1c, 0x45, 0x21, 0x58, 0x6d, 0xb9, 0xc8, 0x0c,
-	0x66, 0xb1, 0xd9, 0x4e, 0xb7, 0xb0, 0x14, 0x04, 0x1b, 0xbb, 0xd9, 0xec, 0x21, 0x19, 0x36, 0x99,
-	0x33, 0x3b, 0x73, 0xa2, 0x88, 0xd8, 0xd8, 0x8a, 0x95, 0x5e, 0x8f, 0x37, 0xe1, 0x2d, 0x78, 0x21,
-	0x42, 0x92, 0x89, 0x59, 0x0b, 0x57, 0xb7, 0x9a, 0x3f, 0x9e, 0x79, 0x1f, 0x0e, 0x6f, 0x78, 0x94,
-	0x60, 0x61, 0x50, 0x83, 0x26, 0x27, 0x52, 0x49, 0x70, 0x2b, 0xef, 0x84, 0x34, 0x4a, 0xa0, 0x55,
-	0xa9, 0xd2, 0xce, 0xaf, 0xdc, 0x58, 0x24, 0x64, 0xfb, 0x59, 0x69, 0x29, 0xc7, 0x64, 0x06, 0x96,
-	0x4b, 0xa3, 0x78, 0xf3, 0x1a, 0x1d, 0xa6, 0x88, 0x69, 0x0e, 0x15, 0x29, 0xb5, 0x46, 0x92, 0xa4,
-	0xd0, 0x53, 0x51, 0xdc, 0xc9, 0x68, 0x08, 0x7b, 0xd3, 0x26, 0x58, 0x98, 0x97, 0xe0, 0x68, 0x31,
-	0x29, 0x1a, 0x2e, 0x61, 0x9c, 0x41, 0xed, 0x60, 0x11, 0x8a, 0xdf, 0xfe, 0x87, 0xeb, 0x17, 0xf5,
-	0x0d, 0x7b, 0x0a, 0xc2, 0xcd, 0x73, 0xa0, 0xfa, 0xc8, 0x62, 0xde, 0x31, 0x6f, 0xff, 0xf3, 0x3b,
-	0xde, 0x38, 0xf0, 0x16, 0xb8, 0x84, 0x79, 0x74, 0xbc, 0x8c, 0xa9, 0x1d, 0xb8, 0x27, 0x9c, 0xe9,
-	0x1f, 0x3c, 0xbe, 0x7f, 0xbc, 0xfc, 0xdb, 0x61, 0xdb, 0xad, 0xe9, 0xbd, 0x96, 0x05, 0x3c, 0xb0,
-	0xe7, 0x20, 0xec, 0x8d, 0x2d, 0x48, 0x82, 0x46, 0xe8, 0xe4, 0x77, 0x42, 0x5d, 0x66, 0x45, 0xa7,
-	0xdd, 0xca, 0x69, 0xab, 0xbf, 0xe1, 0x9d, 0x46, 0xc1, 0x80, 0xbd, 0x06, 0x61, 0xef, 0xca, 0x4c,
-	0xff, 0xec, 0xd3, 0x65, 0x56, 0xf4, 0x89, 0x2a, 0x9f, 0xbd, 0xf8, 0xfb, 0x8c, 0x46, 0xc1, 0xe0,
-	0x6c, 0x7c, 0x7d, 0x9a, 0x2a, 0xca, 0xca, 0x09, 0x4f, 0xb0, 0x10, 0x49, 0x56, 0x26, 0xb3, 0x1c,
-	0x32, 0x90, 0x53, 0x27, 0xbe, 0x72, 0xc4, 0xcf, 0x95, 0x9d, 0xac, 0x55, 0x65, 0x18, 0x7e, 0x06,
-	0x00, 0x00, 0xff, 0xff, 0xfc, 0x82, 0x62, 0xb9, 0xdb, 0x02, 0x00, 0x00,
+	// 290 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xd2, 0x4b, 0xce, 0xcf, 0x2d,
+	0xc8, 0xcf, 0x4b, 0xcd, 0x2b, 0x29, 0xd6, 0xcf, 0x2f, 0xca, 0x4c, 0xcf, 0xcc, 0x2b, 0x2e, 0x2a,
+	0xd3, 0x4f, 0x2c, 0xc8, 0x84, 0xf1, 0x60, 0xb4, 0x5e, 0x41, 0x51, 0x7e, 0x49, 0xbe, 0x90, 0x42,
+	0x46, 0x69, 0x51, 0x49, 0x4e, 0x7e, 0x72, 0x76, 0x6a, 0x91, 0x1e, 0x5c, 0xbd, 0x5e, 0x62, 0x41,
+	0x26, 0x8c, 0x27, 0x25, 0x93, 0x9e, 0x9f, 0x9f, 0x9e, 0x93, 0x0a, 0x36, 0x23, 0x31, 0x2f, 0x2f,
+	0xbf, 0x24, 0xb1, 0x24, 0x33, 0x1f, 0xa6, 0x5f, 0xca, 0x08, 0xab, 0x7d, 0x30, 0xbb, 0x8a, 0x52,
+	0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x50, 0xed, 0x94, 0x32, 0x26, 0xa0, 0xa7, 0xb8, 0x20, 0x3f, 0xaf,
+	0x38, 0x15, 0x55, 0x93, 0xd1, 0x3e, 0x66, 0x2e, 0x76, 0x7f, 0x88, 0x88, 0x50, 0x37, 0x23, 0x17,
+	0xa7, 0x7b, 0x6a, 0x09, 0x84, 0x2b, 0x64, 0xa4, 0x87, 0xd5, 0x0f, 0x30, 0xed, 0x50, 0x37, 0xe8,
+	0xc1, 0x35, 0x04, 0xa5, 0x16, 0x4a, 0x19, 0x12, 0xd2, 0x03, 0x71, 0x83, 0x1e, 0x4c, 0x47, 0x71,
+	0x81, 0x92, 0x78, 0xd3, 0xe5, 0x27, 0x93, 0x99, 0x04, 0x85, 0xf8, 0xe1, 0x2e, 0xad, 0xce, 0x4b,
+	0xcc, 0x4d, 0xad, 0x15, 0xea, 0x65, 0xe4, 0xe2, 0x71, 0x2e, 0x4a, 0x4d, 0x2c, 0x49, 0x85, 0x3a,
+	0xc8, 0x94, 0x38, 0x07, 0x21, 0xeb, 0x21, 0xd3, 0x4d, 0xc2, 0x60, 0x37, 0xf1, 0x2a, 0x71, 0xc0,
+	0xdc, 0x64, 0xc5, 0xa8, 0x25, 0x34, 0x85, 0x91, 0x8b, 0x27, 0xb4, 0x20, 0x85, 0x64, 0xf7, 0x20,
+	0xeb, 0x21, 0xd3, 0x3d, 0x52, 0x60, 0xf7, 0x88, 0x18, 0xa1, 0x87, 0x91, 0x15, 0xa3, 0x96, 0x93,
+	0x6b, 0x94, 0x73, 0x7a, 0x66, 0x49, 0x46, 0x69, 0x12, 0x28, 0x89, 0xea, 0x27, 0x67, 0x94, 0x26,
+	0x67, 0xe7, 0xa4, 0x66, 0xa4, 0x26, 0xa6, 0x14, 0xeb, 0x23, 0xec, 0xd1, 0x27, 0x94, 0x7c, 0x93,
+	0xd8, 0xc0, 0xc9, 0xc1, 0x18, 0x10, 0x00, 0x00, 0xff, 0xff, 0x36, 0x0c, 0x5d, 0x18, 0xe9, 0x02,
+	0x00, 0x00,
 }
