# components/sessionsrv/api/accounts/accounts.pb.go
@@ -1,11 +1,11 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
-// source: components/gateway/api/accounts/accounts.proto
+// source: components/sessionsrv/api/accounts/accounts.proto
 
 /*
 Package accounts is a generated protocol buffer package.
 
 It is generated from these files:
-	components/gateway/api/accounts/accounts.proto
+	components/sessionsrv/api/accounts/accounts.proto
 
 It has these top-level messages:
 */
@@ -60,7 +60,7 @@ func NewAccountsClient(cc *grpc.ClientConn) AccountsClient {
 
 func (c *accountsClient) GetAccount(ctx context.Context, in *hurtlocker_sessionsrv_accounts_request.GetAccountReq, opts ...grpc.CallOption) (*hurtlocker_sessionsrv_accounts_response.AccountResp, error) {
 	out := new(hurtlocker_sessionsrv_accounts_response.AccountResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.accounts.Accounts/GetAccount", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.sessionsrv.accounts.Accounts/GetAccount", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -69,7 +69,7 @@ func (c *accountsClient) GetAccount(ctx context.Context, in *hurtlocker_sessions
 
 func (c *accountsClient) CreateAccount(ctx context.Context, in *hurtlocker_sessionsrv_accounts_request.CreateAccountReq, opts ...grpc.CallOption) (*hurtlocker_sessionsrv_accounts_response.AccountResp, error) {
 	out := new(hurtlocker_sessionsrv_accounts_response.AccountResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.accounts.Accounts/CreateAccount", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.sessionsrv.accounts.Accounts/CreateAccount", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -78,7 +78,7 @@ func (c *accountsClient) CreateAccount(ctx context.Context, in *hurtlocker_sessi
 
 func (c *accountsClient) UpdateAccount(ctx context.Context, in *hurtlocker_sessionsrv_accounts_request.UpdateAccountReq, opts ...grpc.CallOption) (*hurtlocker_sessionsrv_accounts_response.AccountResp, error) {
 	out := new(hurtlocker_sessionsrv_accounts_response.AccountResp)
-	err := grpc.Invoke(ctx, "/hurtlocker.api.accounts.Accounts/UpdateAccount", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/hurtlocker.sessionsrv.accounts.Accounts/UpdateAccount", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -107,7 +107,7 @@ func _Accounts_GetAccount_Handler(srv interface{}, ctx context.Context, dec func
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.accounts.Accounts/GetAccount",
+		FullMethod: "/hurtlocker.sessionsrv.accounts.Accounts/GetAccount",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AccountsServer).GetAccount(ctx, req.(*hurtlocker_sessionsrv_accounts_request.GetAccountReq))
@@ -125,7 +125,7 @@ func _Accounts_CreateAccount_Handler(srv interface{}, ctx context.Context, dec f
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.accounts.Accounts/CreateAccount",
+		FullMethod: "/hurtlocker.sessionsrv.accounts.Accounts/CreateAccount",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AccountsServer).CreateAccount(ctx, req.(*hurtlocker_sessionsrv_accounts_request.CreateAccountReq))
@@ -143,7 +143,7 @@ func _Accounts_UpdateAccount_Handler(srv interface{}, ctx context.Context, dec f
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/hurtlocker.api.accounts.Accounts/UpdateAccount",
+		FullMethod: "/hurtlocker.sessionsrv.accounts.Accounts/UpdateAccount",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AccountsServer).UpdateAccount(ctx, req.(*hurtlocker_sessionsrv_accounts_request.UpdateAccountReq))
@@ -152,7 +152,7 @@ func _Accounts_UpdateAccount_Handler(srv interface{}, ctx context.Context, dec f
 }
 
 var _Accounts_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "hurtlocker.api.accounts.Accounts",
+	ServiceName: "hurtlocker.sessionsrv.accounts.Accounts",
 	HandlerType: (*AccountsServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
@@ -169,31 +169,30 @@ var _Accounts_serviceDesc = grpc.ServiceDesc{
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
-	Metadata: "components/gateway/api/accounts/accounts.proto",
+	Metadata: "components/sessionsrv/api/accounts/accounts.proto",
 }
 
-func init() { proto.RegisterFile("components/gateway/api/accounts/accounts.proto", fileDescriptor0) }
+func init() { proto.RegisterFile("components/sessionsrv/api/accounts/accounts.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 306 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x92, 0xcd, 0x4a, 0x33, 0x31,
-	0x14, 0x86, 0x99, 0xef, 0x03, 0xd1, 0x40, 0x5d, 0x84, 0xa2, 0x38, 0x14, 0x84, 0x2e, 0xbb, 0x48,
-	0xa0, 0x5a, 0x91, 0xee, 0xac, 0x82, 0x7b, 0xc1, 0x8d, 0xbb, 0x34, 0x3d, 0xcc, 0x0c, 0x9d, 0xe6,
-	0xa4, 0xf9, 0x51, 0x44, 0xdc, 0x78, 0x0b, 0x22, 0x6e, 0xbd, 0x27, 0x2f, 0xc0, 0x8d, 0x17, 0x22,
-	0x33, 0x9d, 0x9f, 0xb6, 0x08, 0x23, 0xb3, 0x4b, 0xce, 0xe1, 0xc9, 0xfb, 0x9c, 0x70, 0x08, 0x93,
-	0xb8, 0xd0, 0xa8, 0x40, 0x39, 0xcb, 0x23, 0xe1, 0xe0, 0x41, 0x3c, 0x72, 0xa1, 0x13, 0x2e, 0xa4,
-	0x44, 0x9f, 0x15, 0xcb, 0x03, 0xd3, 0x06, 0x1d, 0xd2, 0xc3, 0xd8, 0x1b, 0x97, 0xa2, 0x9c, 0x83,
-	0x61, 0x42, 0x27, 0xac, 0x6c, 0x87, 0xbd, 0x08, 0x31, 0x4a, 0x61, 0x05, 0x2b, 0x85, 0x4e, 0xb8,
-	0x04, 0x55, 0x81, 0x85, 0xa3, 0xb5, 0x18, 0x0b, 0xd6, 0x66, 0x2d, 0x73, 0x5f, 0xa7, 0x18, 0x58,
-	0x7a, 0xb0, 0x6e, 0x2b, 0x2d, 0x3c, 0x6b, 0xc4, 0xac, 0x46, 0x65, 0x61, 0x8b, 0x1b, 0x7e, 0xfd,
-	0x27, 0xbb, 0x17, 0x45, 0x89, 0xbe, 0x07, 0x84, 0x5c, 0x83, 0x2b, 0xee, 0x74, 0xc4, 0xd6, 0x46,
-	0xa8, 0x1f, 0xad, 0x26, 0x61, 0x85, 0x0b, 0xab, 0x99, 0x1b, 0x58, 0x86, 0xa7, 0xcd, 0xd8, 0xca,
-	0x85, 0x55, 0x90, 0xd5, 0xfd, 0xde, 0xcb, 0xe7, 0xf7, 0xeb, 0xbf, 0x03, 0xda, 0xad, 0x9d, 0x9f,
-	0xbc, 0x05, 0xa3, 0xc4, 0x02, 0x9e, 0xe9, 0x5b, 0x40, 0x3a, 0x97, 0x06, 0x84, 0x83, 0x52, 0xee,
-	0xfc, 0xaf, 0x72, 0x1b, 0x58, 0x7b, 0xbf, 0x6e, 0xee, 0xb7, 0xdf, 0xdf, 0xab, 0xfc, 0xc6, 0xc1,
-	0x80, 0x7e, 0x04, 0xa4, 0x73, 0xab, 0x67, 0x6d, 0xbc, 0x36, 0xb0, 0xf6, 0x5e, 0xc7, 0xb9, 0xd7,
-	0xd1, 0xf0, 0xd7, 0x7f, 0x1b, 0x07, 0x83, 0xc9, 0xd5, 0xdd, 0x24, 0x4a, 0x5c, 0xec, 0xa7, 0xd9,
-	0x02, 0x73, 0x19, 0x7b, 0x39, 0x4f, 0x21, 0x06, 0x31, 0xb3, 0xbc, 0xce, 0xe3, 0x0d, 0xcb, 0x3d,
-	0xdd, 0xc9, 0xd7, 0xe5, 0xe4, 0x27, 0x00, 0x00, 0xff, 0xff, 0x17, 0xbb, 0xd3, 0x80, 0x06, 0x03,
-	0x00, 0x00,
+	// 297 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x92, 0xcd, 0x4a, 0x03, 0x31,
+	0x10, 0xc7, 0x59, 0x05, 0xd1, 0x40, 0x3d, 0x84, 0x22, 0xb8, 0x14, 0x85, 0x1e, 0x7b, 0x48, 0xb0,
+	0x5a, 0x91, 0xde, 0x54, 0xa4, 0x77, 0xc1, 0x8b, 0xb7, 0x34, 0x1d, 0x76, 0x97, 0xee, 0x66, 0xd2,
+	0x7c, 0x78, 0x11, 0x2f, 0xbe, 0x82, 0x88, 0x57, 0xdf, 0xc9, 0x07, 0xf0, 0xe2, 0x83, 0x48, 0xf7,
+	0xa3, 0x4b, 0x8b, 0xba, 0xb2, 0xb7, 0x64, 0x98, 0x5f, 0xfe, 0xbf, 0x0c, 0x43, 0x4e, 0x24, 0x66,
+	0x1a, 0x15, 0x28, 0x67, 0xb9, 0x05, 0x6b, 0x13, 0x54, 0xd6, 0x3c, 0x70, 0xa1, 0x13, 0x2e, 0xa4,
+	0x44, 0xbf, 0xac, 0x57, 0x07, 0xa6, 0x0d, 0x3a, 0xa4, 0x47, 0xb1, 0x37, 0x2e, 0x45, 0x39, 0x07,
+	0xc3, 0x6a, 0x84, 0x55, 0x5d, 0x61, 0x2f, 0x42, 0x8c, 0x52, 0x28, 0xde, 0x50, 0x0a, 0x9d, 0x70,
+	0xcb, 0x96, 0x82, 0x0e, 0x47, 0xbf, 0x04, 0x56, 0x61, 0x06, 0x16, 0x1e, 0xac, 0xdb, 0x08, 0x0d,
+	0xcf, 0x1b, 0x31, 0xab, 0x51, 0x59, 0xd8, 0xe0, 0x86, 0x9f, 0xdb, 0x64, 0xf7, 0xb2, 0x2c, 0xd1,
+	0xb7, 0x80, 0x90, 0x09, 0xb8, 0xf2, 0x4e, 0x47, 0xec, 0xef, 0x9f, 0xb0, 0xd2, 0x85, 0xd5, 0xcc,
+	0x2d, 0x2c, 0xc2, 0xb3, 0x66, 0xac, 0x70, 0x61, 0x2b, 0xc8, 0xea, 0x7e, 0xef, 0xf9, 0xe3, 0xeb,
+	0x65, 0xeb, 0x80, 0x76, 0x6b, 0xe7, 0x47, 0x6f, 0xc1, 0x28, 0x91, 0xc1, 0x13, 0x7d, 0x0d, 0x48,
+	0xe7, 0xda, 0x80, 0x70, 0x50, 0xc9, 0x5d, 0xfc, 0x57, 0x6e, 0x0d, 0x6b, 0xef, 0xd7, 0xcd, 0xfd,
+	0xf6, 0xfb, 0x7b, 0x2b, 0xbf, 0x71, 0x30, 0xa0, 0xef, 0x01, 0xe9, 0xdc, 0xe9, 0x59, 0x1b, 0xaf,
+	0x35, 0xac, 0xbd, 0xd7, 0x71, 0xee, 0x75, 0x38, 0xfc, 0x71, 0x6e, 0xe3, 0x60, 0x70, 0x35, 0xb9,
+	0xbf, 0x89, 0x12, 0x17, 0xfb, 0x29, 0x93, 0x98, 0x71, 0x19, 0x7b, 0x39, 0x4f, 0x21, 0x06, 0x31,
+	0xb3, 0xbc, 0xce, 0xe3, 0xcd, 0x6b, 0x3e, 0xdd, 0xc9, 0x37, 0xe6, 0xf4, 0x3b, 0x00, 0x00, 0xff,
+	0xff, 0x1b, 0x44, 0x1a, 0xd8, 0x13, 0x03, 0x00, 0x00,
 }
