# components/sessionsrv/api/accounts/accounts.pb.gw.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-grpc-gateway. DO NOT EDIT.
-// source: components/gateway/api/accounts/accounts.proto
+// source: components/sessionsrv/api/accounts/accounts.proto
 
 /*
 Package accounts is a reverse proxy.
